--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,5 @@
-sed_section_fields
+h1. sed_section_fields
 
 Released under the GPLv2
 
-A plugin for textpattern (http://textpattern.com) 
+A plugin for "textpattern ... http://textpattern.com":http://textpattern.com 
